<resources>
    <string name="app_name">eTMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Hi, NIRAJ JAISWAL</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="apply_bus_pass">Apply Bus Pass</string>
    <string name="bus_pass_request_status">Buspass Request Status</string>
    <string name="back_to_home_page">Back To Home Page</string>
    <string name="logout">Logout</string>
    <string name="welcome_to">Welcome To</string>
    <string name="tcs_etms">TCS eTMS</string>
    <string name="please_select_your_service">Please Select your Service</string>
    <string name="route_type">Route Type</string>
    <string name="bus_stop_name">Bus Stop Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="name">Name</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="bus_service_image">Bus Service Image</string>
    <string name="bus_service">Bus Service</string>
    <string name="cab_service_image">Cab Service Image</string>
    <string name="cab_service">Cab Service</string>
    <string name="yourself_service">Yourself Service</string>
    <string name="geocode_yourself">Geocode Yourself</string>
    <string name="notification">Notification</string>
</resources>