<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcomeScreen"
            type="com.example.etms.WelcomeScreenActivity" />


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_screen_background"
        tools:context=".WelcomeScreenActivity">

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/welcome_to"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tcs_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/tcs_etms"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/select_service_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/please_select_your_service"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bus_service_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_text"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:background="@drawable/service_background"
            android:onClick="@{()-> welcomeScreen.handleClickOnBusService()}"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:id="@+id/bus_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/bus_service_image"
                android:src="@drawable/baseline_directions_bus_filled_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/bus_service"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cab_service_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bus_service_ll"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/service_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cab_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/cab_service_image"
                android:src="@drawable/baseline_directions_car_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/cab_service"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/self_service_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cab_service_ll"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/service_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/location_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/yourself_service"
                android:src="@drawable/baseline_location_on_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/geocode_yourself"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>
</layout>