<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/source_des_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:elevation="3dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/welcome_screen_background">

                <TextView
                    android:id="@+id/source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="Barrakpore Chiriamore "
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/forward_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/source"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/baseline_arrow_forward_24" />

                <ImageView
                    android:id="@+id/backward_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forward_arrow"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/baseline_keyboard_backspace_24" />

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/backward_arrow"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="Ecospace IT "
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/office_in_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/destination"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Office In - 11:30"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/office_out_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/destination"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Office Out - 19:30"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/employee_details_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/source_des_card"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/name"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/employee_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/employee_id"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/name_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_tv"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:text="Niraj Jaiswal"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/emp_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_id_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="10dp"
                    android:text="1916793"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/bus_stop_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emp_value_tv"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/bus_stop_name"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/route_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emp_value_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/route_type"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/bus_stop_name_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bus_stop_name_tv"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:text="Lake Town (jessore Road)"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/route_type_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/route_type_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="10dp"
                    android:text="Both"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/start_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bus_stop_name_value_tv"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/start_date"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/end_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bus_stop_name_value_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/end_date"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/start_date_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/start_date_tv"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:text="1st Sep, 2023"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/end_date_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/end_date_tv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="10dp"
                    android:text="30th Sep, 2023"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/end_date_value_tv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="Route: Barrakpore Chiriamore
        To Gitanjali Park And Return Via-LakeTown"
                    android:textSize="19sp" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>
        <!-- add image view -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_below="@id/employee_details_card" />
    </RelativeLayout>
</layout>